# evokernel-prototype

./: .gitignore  EvoKernel_算法流程整理.md  README.md  pyproject.toml
configs/: cpu_simd.toml  default.toml
doc/: paper.txt
docs/superpowers/plans/: 2026-03-26-evokernel-prototype.md
docs/superpowers/specs/: 2026-03-26-evokernel-prototype-design.md
prompts/: drafting_system.md  refining_system.md
src/evokernel/: cli.py  config.py
src/evokernel/backend/: base.py  cpu_simd.py  toolchain.py
src/evokernel/benchmarks/: cpu_simd_tasks.py  models.py  task_registry.py
src/evokernel/domain/: enums.py  errors.py  models.py
src/evokernel/generator/: base.py  openai_compatible.py  prompt_builder.py
src/evokernel/memory/: document.py  embedding.py  seeds.py  state_signature.py  store.py
src/evokernel/orchestrator/: episode.py  run_report.py
src/evokernel/retrieval/: policy.py  q_store.py  recall.py  reward.py
src/evokernel/verifier/: anti_hack.py  core.py  correctness.py  profiling.py
tests/: conftest.py  test_smoke_import.py
tests/backend/: test_cpu_simd_backend.py
tests/domain/: test_models.py
tests/generator/: test_openai_compatible.py  test_prompt_builder.py
tests/integration/: test_cpu_simd_pipeline.py
tests/memory/: test_store.py
tests/orchestrator/: test_episode.py
tests/retrieval/: test_policy.py
tests/verifier/: test_anti_hack.py  test_correctness.py  test_profiling.py
